[gd_scene load_steps=8 format=2]

[ext_resource path="res://fonts/Comfortaa-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://src/core/DeckBuilder/CardLabel.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/core/DeckBuilder/DBListCardObject.gd" type="Script" id=3]
[ext_resource path="res://src/core/DeckBuilder/QuantityNumberButton.gd" type="Script" id=4]
[ext_resource path="res://src/core/IntegerLineEdit.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 12
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 15
use_filter = true
font_data = ExtResource( 1 )

[node name="DBListCardObject" type="HBoxContainer"]
margin_right = 628.0
margin_bottom = 20.0
custom_constants/separation = 60
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quantity" type="HBoxContainer" parent="."]
margin_right = 19.0
margin_bottom = 20.0
custom_constants/separation = 0

[node name="0" type="Button" parent="Quantity"]
margin_right = 19.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 1 )
toggle_mode = true
text = "0"
script = ExtResource( 4 )

[node name="1" type="Button" parent="Quantity"]
visible = false
margin_left = 19.0
margin_right = 36.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 1 )
toggle_mode = true
text = "1"
script = ExtResource( 4 )

[node name="2" type="Button" parent="Quantity"]
visible = false
margin_left = 19.0
margin_right = 38.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 1 )
toggle_mode = true
text = "2"
script = ExtResource( 4 )

[node name="3" type="Button" parent="Quantity"]
visible = false
margin_left = 19.0
margin_right = 38.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 1 )
toggle_mode = true
text = "3"
script = ExtResource( 4 )

[node name="4" type="Button" parent="Quantity"]
visible = false
margin_left = 19.0
margin_right = 39.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 1 )
toggle_mode = true
text = "4"
script = ExtResource( 4 )

[node name="5" type="Button" parent="Quantity"]
visible = false
margin_left = 19.0
margin_right = 39.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 1 )
toggle_mode = true
text = "5"
script = ExtResource( 4 )

[node name="IntegerLineEdit" type="LineEdit" parent="Quantity"]
visible = false
margin_left = 19.0
margin_right = 77.0
margin_bottom = 24.0
placeholder_text = "0"
script = ExtResource( 5 )

[node name="Plus" type="Button" parent="Quantity"]
visible = false
margin_left = 19.0
margin_right = 38.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 1 )
text = "+"

[node name="Minus" type="Button" parent="Quantity"]
visible = false
margin_left = 19.0
margin_right = 38.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 1 )
text = "-"

[node name="CardLabel" parent="." instance=ExtResource( 2 )]
margin_left = 79.0
margin_top = 1.0
margin_right = 533.0
margin_bottom = 19.0

[node name="Type" type="Label" parent="."]
margin_left = 593.0
margin_top = 1.0
margin_right = 628.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 2 )
text = "Blue"

[connection signal="pressed" from="Quantity/Plus" to="." method="_on_Plus_pressed"]
[connection signal="pressed" from="Quantity/Minus" to="." method="_on_Minus_pressed"]
